<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_input_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_input_email"
        app:srcCompat="@drawable/profile_icon_iki" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:theme="@style/TextInputLayoutAppearance"
        app:errorEnabled="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/log_in_username_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#fff"
            android:hint="@string/email"
            android:inputType="text"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="29dp"
        android:layout_height="29dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_input_password"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/text_input_email"
        app:srcCompat="@drawable/lock_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/TextInputLayoutAppearance"
        app:errorEnabled="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/text_input_email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/log_in_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/log_in_custom_button"
        android:text="@string/log_in"
        android:textSize="20sp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="@+id/text_input_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/text_input_password" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/create_account_custom_button"
        android:text="@string/create_account"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/log_in_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/log_in_button"
        app:layout_constraintTop_toBottomOf="@+id/log_in_button" />

    <TextView
        android:id="@+id/forgot_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Forgot_password"
        android:textColor="#000000"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/create_account_button"
        app:layout_constraintStart_toStartOf="@+id/create_account_button"
        app:layout_constraintTop_toBottomOf="@+id/create_account_button" />


</androidx.constraintlayout.widget.ConstraintLayout>