<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:id="@+id/fragment_pop_up">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:cardCornerRadius="60dp"
        android:alpha="1.0">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_view_background"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_one"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:alpha="0.5">
                </ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center">

                        <Chronometer
                            android:id="@+id/fragment_pop_up_chronometer_top"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="60dp"
                            android:alpha="1.0"
                            android:textColor="#832828"
                            android:layout_marginTop="15dp"
                            android:gravity="center"
                            android:textStyle="bold"/>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/year"
                                android:textSize="25dp"
                                android:textColor="#832828"
                                android:layout_marginLeft="40dp">
                            </TextView>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/month"
                                android:textSize="25dp"
                                android:textColor="#832828"
                                android:gravity="center">
                            </TextView>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/day"
                                android:textSize="25dp"
                                android:textColor="#832828"
                                android:gravity="end"
                                android:layout_marginEnd="40dp">
                            </TextView>

                        </FrameLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center">

                        <Chronometer
                            android:id="@+id/fragment_pop_up_chronometer_bottom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|center_horizontal|top"
                            android:textColor="#832828"
                            android:alpha="1.0"
                            android:textSize="60dp"
                            android:textStyle="bold"/>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/hour"
                                android:textSize="25dp"
                                android:textColor="#832828"
                                android:layout_marginLeft="40dp">
                            </TextView>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/minute"
                                android:textSize="25dp"
                                android:textColor="#832828"
                                android:gravity="center">
                            </TextView>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/second"
                                android:textSize="25dp"
                                android:textColor="#832828"
                                android:gravity="end"
                                android:layout_marginEnd="25dp">
                            </TextView>

                        </FrameLayout>

                    </LinearLayout>

                </LinearLayout>

            </FrameLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>